syntax = "proto3";

package aggregator.methods;

option go_package = "github.com/Yux77Yux/platform_backend/generated/aggregator";

import "user/methods/get.proto";
import "creation/methods/get.proto";
import "common/api_response.proto";

message SpaceRequest {
  int64 user_id = 1;
}

message SpaceResponse{
  common.ApiResponse msg = 1;

  creation.methods.GetCreationListResponse creation_list = 2;
  
  user.methods.GetUserResponse user = 3;
}